FILE(GLOB headers *.h)
FILE(GLOB sources *.cxx)
list(REMOVE_ITEM headers ${CMAKE_CURRENT_SOURCE_DIR}/LinkDef.h)
ADD_LIBRARY(LArLite_Analysis SHARED ${headers} ${sources} )
TARGET_LINK_LIBRARIES(LArLite_Analysis ${ROOT_LIBRARIES} ${LArLite_Base} ${LArLite_DataFormat} ${LArLite_LArUtil} ${Boost_LIBRARIES} ${PythonLibs_LIBRARIES})
INSTALL(FILES ${headers} DESTINATION include)
INSTALL(TARGETS LArLite_Analysis  DESTINATION lib)
