FILE(GLOB headers *.h)
FILE(GLOB sources *.cxx)
list(REMOVE_ITEM headers ${CMAKE_CURRENT_SOURCE_DIR}/LinkDef.h)
ADD_LIBRARY(LArLite_LArUtil SHARED ${headers} ${sources} )
TARGET_LINK_LIBRARIES(LArLite_LArUtil ${ROOT_LIBRARIES} ${LArLite_LArUtil} ${LArLite_DataFormat} ${Boost_LIBRARIES} ${PythonLibs_LIBRARIES})
INSTALL(FILES ${headers} DESTINATION include)
INSTALL(TARGETS LArLite_LArUtil  DESTINATION lib)
